# MiniEditor

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  build-run-test.sh  build-run.sh  build.py  build.sh  compile_commands.json  regenerate_cmake.sh  run_format.sh  run_test.sh  steps.txt
.github/workflows/: ci.yml
include/: alias.h  editor.h  implicit_treap.h  palloc_global.h  piecetable.h  red_black_tree.h  tui.h
src/: editor.cpp  implicit_treap.cpp  main.cpp  palloc_overrides.cpp  piecetable.cpp  red_black_tree.cpp  tui.cpp
stress_tests/: bench_to_string.cpp  check_piece_count.cpp  stress_alternating_ops.cpp  stress_front_ops.cpp  stress_get_index.cpp  stress_get_line.cpp  stress_newlines.cpp  stress_random_edits.cpp
tests/: README  test_buffer.cpp  test_editor.cpp  test_implicit_treap.cpp  test_piecetable.cpp  test_red_black_tree.cpp  test_tui.cpp
